fix inaccessible links in HomePage by changing z-index of .app to 1 and .app::before to -1 and reduce .view-portfolio-container width to 200px

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,7 +41,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 .app::before {
@@ -52,7 +52,7 @@ body {
   bottom: 0;
   right: 0;
   background-color: rgba(230, 230, 230, 0.5);
-  z-index: -2;
+  z-index: -1;
 }
 
 .navbar {
@@ -170,6 +170,7 @@ body {
 
     .view-portfolio-container {
       // border: 1px solid blue;
+      width: 200px;
       margin-block: 50px 70px;
       margin-inline: 65px;
       
@@ -192,7 +193,7 @@ body {
   // border: 1px solid purple;
   background-color: $white;
   position: absolute;
-  top: 100px;
+  top: 80px;
   left: 150px;
   border-radius: 15px;
   box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
@@ -202,10 +203,10 @@ body {
     // border: 1px solid yellow;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: $pink;
-    padding: 20px;
+    padding: 35px 20px;
     margin: 15px;
 
     .avatar {
